Source/WebCore: Avoid sending video data to Web process for canvas.drawImage(video) https://bugs.webkit.org/show_bug.cgi?id=230766 <rdar://problem/83576009>

Reviewed by Simon Fraser.

Using nativeImageForCurrentTime() to get the image to paint on to the
canvas results in a ShareableBitmap being created to send to the
Web process, the identifier for which we then send back to the GPU
process for the drawImage() call. But if we use
paintCurrentFrameInContext(), this uses the PaintFrameForMedia
message, which just sends the MediaPlayer ID and avoids the bitmap
creation.

* html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::drawImage):
* platform/graphics/ImageBuffer.h:
(WebCore::ImageBuffer::isRemote const):

Source/WebKit:
Avoid sending video data to Web process for canvas.drawImage(video).
https://bugs.webkit.org/show_bug.cgi?id=230766
<rdar://problem/83576009>

Reviewed by Simon Fraser.

* WebProcess/GPU/graphics/RemoteImageBufferProxy.h:



Canonical link: https://commits.webkit.org/243698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285055 268f45cc-cd09-0410-ab3c-d52691b4dbfc